# flash-linear-attention-npu

./: README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  repository-rules.yml
chunk_gated_delta_rule/recompute_wu_fwd/test/: test.py
chunk_gated_delta_rule/recurrent_gated_delta_rule/op_host/: recurrent_gated_delta_rule_def.cpp  recurrent_gated_delta_rule_tiling.cpp
chunk_gated_delta_rule/recurrent_gated_delta_rule/op_host/op_api/: aclnn_recurrent_gated_delta_rule.cpp
chunk_gated_delta_rule/recurrent_gated_delta_rule/op_kernel/: recurrent_gated_delta_rule.cpp  recurrent_gated_delta_rule.h
ci/: Dockerfile  detect_npu.sh  run_checks.sh  run_ci_container.sh
docs/: repository-rules.md
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/: README.md
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/docs/: CausalConv1dBwdDesign.md  aclnnCausalConv1dBwd.md
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/examples/: test_aclnn_causal_conv1d_bwd.cpp
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/tests/ut/op_kernel/: CMakeLists.txt  causal_conv1d_bwd_tiling.h  test_causal_conv1d_bwd.cpp
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/tests/ut/op_kernel/causal_conv1d_bwd_data/: compare_data.py  gen_data.py
scripts/github/: apply_branch_protection.sh
torch_custom/aclnn_extension/: npu_custom.yaml
torch_custom/aclnn_extension/op_plugin/ops/opapi/: FLANpuOpApi.cpp
torch_custom/fla_npu/: npu_custom.yaml
torch_custom/fla_npu/op_plugin/ops/opapi/: FLANpuOpApi.cpp
(+17 files in other folders)
